crates/atlas-runtime/tests/snapshots/parser_tests__json_as_number.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Identifier:
                name: data
                span:
                  start: 0
                  end: 4
            member:
              name: as_number
              span:
                start: 5
                end: 14
            args: []
            span:
              start: 0
              end: 16
        span:
          start: 0
          end: 17
