crates/atlas-runtime/tests/snapshots/parser_tests__json_extraction_as_string.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Index:
                target:
                  Identifier:
                    name: json
                    span:
                      start: 0
                      end: 4
                index:
                  Literal:
                    - String: user
                    - start: 5
                      end: 11
                span:
                  start: 0
                  end: 12
            member:
              name: as_string
              span:
                start: 13
                end: 22
            args: []
            span:
              start: 0
              end: 24
        span:
          start: 0
          end: 25
