crates/atlas-runtime/tests/snapshots/parser_tests__method_with_multiple_args.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Identifier:
                name: obj
                span:
                  start: 0
                  end: 3
            member:
              name: method
              span:
                start: 4
                end: 10
            args:
              - Identifier:
                  name: a
                  span:
                    start: 11
                    end: 12
              - Identifier:
                  name: b
                  span:
                    start: 14
                    end: 15
              - Identifier:
                  name: c
                  span:
                    start: 17
                    end: 18
            span:
              start: 0
              end: 19
        span:
          start: 0
          end: 20
