crates/atlas-runtime/tests/snapshots/parser_tests__method_with_one_arg.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Identifier:
                name: obj
                span:
                  start: 0
                  end: 3
            member:
              name: method
              span:
                start: 4
                end: 10
            args:
              - Identifier:
                  name: x
                  span:
                    start: 11
                    end: 12
            span:
              start: 0
              end: 13
        span:
          start: 0
          end: 14
