crates/atlas-runtime/tests/snapshots/parser_tests__parse_chained_member_calls.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Member:
                target:
                  Identifier:
                    name: a
                    span:
                      start: 0
                      end: 1
                member:
                  name: b
                  span:
                    start: 2
                    end: 3
                args: []
                span:
                  start: 0
                  end: 5
            member:
              name: c
              span:
                start: 6
                end: 7
            args: []
            span:
              start: 0
              end: 9
        span:
          start: 0
          end: 10
