crates/atlas-runtime/tests/snapshots/parser_tests__parse_member_after_index.snap
---
source: crates/atlas-runtime/tests/parser_tests.rs
expression: program
---
items:
  - Statement:
      Expr:
        expr:
          Member:
            target:
              Index:
                target:
                  Identifier:
                    name: arr
                    span:
                      start: 0
                      end: 3
                index:
                  Literal:
                    - Number: 0
                    - start: 4
                      end: 5
                span:
                  start: 0
                  end: 6
            member:
              name: method
              span:
                start: 7
                end: 13
            args: []
            span:
              start: 0
              end: 15
        span:
          start: 0
          end: 16
